edited Home page html and css to fix alignment issues.

--- a/css/index.css
+++ b/css/index.css
@@ -98,11 +98,11 @@ h1, h2, h3, h4, h5 {
 }
 
 p {
-    line-height: 1.4;
+    line-height: 2;
 }
 
 .container {
-    width: 95%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -110,20 +110,18 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
 
 .top-content .text-container {
-    width: 50%;
-    padding: 2% 5%;
-    padding-bottom: 20px;  
+    width: 40%;
+    padding-bottom: 1px;  
 }
 
 .middle-content {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     border-bottom: 1px dashed black;
-    width:88%;
+    width:100%;
     margin: 0 auto;
 }
 
@@ -254,42 +252,73 @@ p {
 .bottom-content {
     display: flex;
     justify-content: space-around;
-    width:93%;
+    width:90%;
     margin: 0 auto;
 }
 
 .bottom-content .text-container {
-    padding: 2% 5%;
+    height:150px;
+    width: 350px;
+    text-align:left;
+	line-height: 2;
+
 }
 
-.bottom-content .text-container:last-child {
-    padding-right: 0;
-}
 
 footer {
-    width: 100%;
     background: black;
     display:flex;
-    align-items: center;
-    justify-content: center;
+    align-content: flex-start;
+    margin: 0 5%;
+}
+.homeFooter { 
+    width:80%;
+    display:flex;
+    justify-content: space-evenly;
+    padding: 25px;
 
 }
-
 footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
+    width: 100%;
     font-size: 14px;
+    
 }
 
 footer nav a {
     color: white;
     text-decoration: none;
+    text-align: left;
 }
 
 /*START ABOUT.HTML STYLING*/
+* {
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+
+}
+body {
+    max-width: 100%;
+}
+
+header nav {
+	display:flex;
+    justify-content:center;
+    padding: 3% 0;
+	
+}
+.links2 {
+	width:80%;
+	display:flex;
+    justify-content:space-evenly;
+    margin:auto;
+}
+nav a{
+	color: black;
+	text-decoration: none;
+  }
+
+  }
 .container2{
     display:flex;
     width: 80%;
@@ -324,7 +353,7 @@ footer nav a {
     font-size: 20px;
 }
 
-.learnmore {
+h4 {
     border-radius:25px;
     border:1px solid black;
     text-align: center;
